# open-sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  pyproject.toml  tech_summary.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  configuration.md  developing.md  engines.md
evals/fsm/: direct_account_action.json  escalation_path.json  happy_path.json  multi_issue.json  osentinel.yaml  skip_verification.json
evals/judge/: osentinel.yaml  prompt_injection.json  safe_response.json  system_prompt_leak.json
evals/nemo/: clean_support.json  financial_advice.json  osentinel.yaml  security_bypass.json
examples/: README.md  customer_support.yaml
examples/fsm_workflow/: customer_support.yaml  osentinel.yaml  workflow_enforcement.py
examples/gemini_fsm/: customer_support.yaml  gemini_agent.py  osentinel.yaml  panoptes.yaml
examples/judge/: llm_judge.py  osentinel.yaml  panoptes.yaml  prompt_injection.py
examples/nemo_guardrails/: content_safety.py  nemo_agent.py  osentinel.yaml
examples/quickstart/: osentinel.yaml  quickstart.py
opensentinel/: __init__.py  cli.py  cli_init.py  cli_ui.py
opensentinel/config/: __init__.py  schema.yaml  settings.py
opensentinel/core/: __init__.py
opensentinel/eval/: __init__.py  metrics.py  mocks.py  reporter.py  runner.py
opensentinel/policy/: __init__.py  protocols.py  registry.py
opensentinel/proxy/: __init__.py  hooks.py  middleware.py  server.py
opensentinel/tracing/: __init__.py  otel_tracer.py
panoptes/: __init__.py  cli.py  cli_init.py
panoptes/config/: __init__.py  settings.py
panoptes/core/: __init__.py
panoptes/intervention/: __init__.py  prompt_injector.py
panoptes/monitor/: __init__.py  classifier.py  tracker.py
panoptes/policy/: __init__.py  protocols.py  registry.py
panoptes/proxy/: __init__.py  hooks.py  middleware.py  server.py
panoptes/tracing/: __init__.py  langfuse_integration.py  otel_tracer.py
panoptes/workflow/: __init__.py  constraints.py  parser.py  schema.py  state_machine.py
tests/: __init__.py  conftest.py  test_classifier.py  test_cli.py  test_cli_ui.py  test_composite_engine.py  test_constraints.py  test_datetime_consistency.py  test_examples.py  test_intervention.py  test_nemo_engine.py  test_otel_tracer.py  test_state_machine.py  test_workflow_parser.py
tests/config/: test_flat_config.py  test_model_defaults.py  test_validation.py  test_yaml_schema.py
(+145 files in other folders)
